force-app/main/default/objects/RTL_NBO_Product_Record_Type_Mapping__mdt/RTL_NBO_Product_Record_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This is to map NBO Product record type with product group</description>
    <label>NBO Product Record Type Mapping</label>
    <pluralLabel>NBO Product Record Type Mappings</pluralLabel>
</CustomObject>