force-app/main/default/objects/RTL_NBO_Product_Record_Type_Mapping__mdt/fields/Default_Stage__c.field-meta.xml
<CustomField>
    <fullName>Default_Stage__c</fullName>
    <description>Default Opportunity Stage when first creating an opportunity from call list</description>
    <label>Default Stage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>