force-app/main/default/objects/RTL_NBO_Product_Record_Type_Mapping__mdt/fields/RTL_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Group__c</fullName>
    <description>This is NBO Product Group</description>
    <label>Product Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>