force-app/main/default/objects/RTL_NBO_Product_Record_Type_Mapping__mdt/fields/RTL_Record_Type_DevName__c.field-meta.xml
<CustomField>
    <fullName>RTL_Record_Type_DevName__c</fullName>
    <description>NBO Product Record Type Developer Name</description>
    <label>Record Type DevName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>